<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:padding="16dp">
  <RadioGroup
    android:id="@+id/sort_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginBottom="16dp">
    <RadioButton
      android:id="@+id/time_radio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/time"
      android:checked="true"
      />
    <RadioButton
      android:id="@+id/type_radio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/request_type"
      />
    <RadioButton
      android:id="@+id/status_radio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/response_status"
      />

  </RadioGroup>
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/request_recycle_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      android:orientation="vertical"
      />
    <ProgressBar
      android:id="@+id/progress"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      />

  </FrameLayout>

</LinearLayout>