<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="8dp"
  >
  <androidx.appcompat.widget.SwitchCompat
    android:id="@+id/file_toggle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_file"
    android:checked="false"
    android:layout_marginEnd="4dp"
    />
  <EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/key_edit"
    android:background="@drawable/shape_rounded_outline_border"
    android:paddingVertical="8dp"
    android:paddingHorizontal="4dp"
    android:layout_weight="1"
    android:singleLine="true"
    android:maxLines="1"
    android:hint="@string/hint_key"
    android:layout_marginEnd="4dp"/>
  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/value_parent_layout"
    android:layout_marginEnd="4dp"
    android:background="@drawable/shape_rounded_outline_border"
    android:layout_weight="1">
    <EditText
      android:id="@+id/value_edit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@null"
      android:layout_weight="1"
      android:paddingVertical="8dp"
      android:paddingHorizontal="4dp"
      android:hint="@string/hint_value"
      android:enabled="false"
      android:singleLine="true"
      android:maxLines="1"
      />
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/add_file_button"
      android:layout_gravity="center"
      android:src="@drawable/baseline_attach_file_24"
      />
  </LinearLayout>
  <ImageView
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:layout_gravity="center"
    android:id="@+id/remove_button"
    android:src="@drawable/baseline_delete_24"
    />

</LinearLayout>